Fix HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@ I hope we can keep growing together, learning from each other, and holding on, n
 *You are one of the best gifts in my life 🤍* 
 
 (I would also want to say sorry karena tadi ga bales chat kamu, maaff sayangg aku beneran kelupaan 😢) </p>
+
+<div id="xmas-gallery-modal" class="xmas-modal-overlay" onclick="closeXmasGallery(event)">
+    <div class="xmas-modal-content">
+        <h3 style="color: #ffb7ce; margin-bottom: 15px;">Our Christmas Memories 🎄</h3>
+        <div class="gallery-grid">
+            <img src="foto1.jpg" style="width:100%; border-radius:10px; margin-bottom:10px;">
+            <img src="foto2.jpg" style="width:100%; border-radius:10px; margin-bottom:10px;">
+            </div>
+        <button onclick="document.getElementById('xmas-gallery-modal').classList.remove('show-pop')" 
+                style="margin-top:10px; border:none; background:none; color:#888; cursor:pointer;">
+            Close
+        </button>
+    </div>
+</div>
+
     <script src="func.js"></script>
 </body>
+
 </html>
