--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ I hope we can keep growing together, learning from each other, and holding on, n
 
 <div id="xmas-gallery-modal" class="xmas-modal-overlay" onclick="closeXmasGallery(event)">
     <div class="xmas-modal-content">
-        <h3 style="color: #ffb7ce; margin-bottom: 15px;">Our Christmas Memories 🎄</h3>
+        <h3 style="color: #ffb7ce; margin-bottom: 15px;">Our Christmas Memories</h3>
         <div class="gallery-grid">
             <img src="foto1.jpg" style="width:100%; border-radius:10px; margin-bottom:10px;">
             <img src="foto2.jpg" style="width:100%; border-radius:10px; margin-bottom:10px;">
@@ -128,3 +128,4 @@ I hope we can keep growing together, learning from each other, and holding on, n
 </body>
 
 </html>
+
